# metnum

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  commons.ipynb  generar_ciclico.ipynb  runAndCompare.sh  tests
.ipynb_checkpoints/: commons-checkpoint.ipynb
Experiments/: AbsoluteError.py  approximation.py  config.py  experiments.py  generateExperiments.py  generateGraphs.py  runAllScripts.py  runErrorExperiments.py  runExperiments.py
Experiments/Jupyter/: commons.ipynb  generar_ciclico.ipynb
Experiments/camino_largo_para_testear_p/: camino_largo_para_testear_p_10.txt.out  camino_largo_para_testear_p_100.txt  camino_largo_para_testear_p_100.txt.out  camino_largo_para_testear_p_1000.txt  camino_largo_para_testear_p_1000.txt.out  camino_largo_para_testear_p_101.txt  camino_largo_para_testear_p_101.txt.out  camino_largo_para_testear_p_102.txt  camino_largo_para_testear_p_102.txt.out  camino_largo_para_testear_p_103.txt  camino_largo_para_testear_p_103.txt.out  camino_largo_para_testear_p_104.txt  camino_largo_para_testear_p_104.txt.out  camino_largo_para_testear_p_105.txt  camino_largo_para_testear_p_105.txt.out  camino_largo_para_testear_p_106.txt  camino_largo_para_testear_p_106.txt.out  camino_largo_para_testear_p_107.txt  camino_largo_para_testear_p_107.txt.out  camino_largo_para_testear_p_108.txt  camino_largo_para_testear_p_108.txt.out  camino_largo_para_testear_p_109.txt  camino_largo_para_testear_p_109.txt.out  (+1966 more)
ejemplos/: matrizDiapo
entregable/: README.md
src/: Matrix.cpp  Matrix.h  Solver1.cpp  Solver1.h  main.cpp
(+16092 files in other folders)
