PROJECT(tp1)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.13)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -std=c++17 -Wall -Wpedantic -Wextra -Wshadow -Wpointer-arith -Wcast-qual")
SET(SOURCE_FILES src/cpp/main/main.cpp src/cpp/main/Solver.h src/cpp/main/Solver1.cpp src/cpp/main/Matrix.cpp)
ADD_EXECUTABLE(tp1 ${SOURCE_FILES})